# ThirdParty-Lapack

./: .gitattributes  INSTALL.LAPACK  Makefile.am  Makefile.in  coinlapack-uninstalled.pc.in  coinlapack.pc.in  configure  configure.ac  get.Lapack  index.md  lapack-uninstalled.pc.in  lapack.pc.in
1.0/: configure  configure.ac
stable/1.0/: configure.ac
trunk/: configure  get.Lapack
